fix: [CDS-36029]: Set overflow auto for floating execution step details widget (#8386)

--- a/src/modules/70-pipeline/components/ExecutionStepDetails/ExecutionStepDetails.module.scss
+++ b/src/modules/70-pipeline/components/ExecutionStepDetails/ExecutionStepDetails.module.scss
@@ -8,6 +8,7 @@
 .main {
   background: var(--white);
   min-height: calc(var(--execution-children-height) - var(--execution-stage-details-height));
+  overflow: auto;
 
   & > :global(.bp3-spinner) {
     flex: 1;
